2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Fix typo (syserror() -> syserr()).

2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Use || to fallback to
	a default value instead of using a temporary variable and checking if
	it's not defined.

2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Use ||= instead of checking if the
	variables are not defined.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/update-alternatives.pl (fill_missing_slavepaths): Likewise.

2007-12-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Deps.pm: Add a compare function that compares
	dependencies more intelligently than a comparison on their
	string representation. In particular we want >= and >> to sort
	lower than << and <= so that intervals are nicely displayed
	as "a (>= 1), a (<< 2)" instead of the ugly "a (<< 2), a (>= 1)".

2007-12-10  Raphael Hertzog  <hertzog@debian.org>

	* README.translators: Explain how to format Git commit messages.

2007-12-10  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (merge_symbols): Do not update
	the deprecated version of a symbol if it is already marked
	deprecated.

2007-12-09  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Pass the current
	object as last parameter so that included files do not need to
	repeat the header line.
	* scripts/t/200_Dpkg_Shlibs/symbols.fake-1,
	scripts/t/200_Dpkg_Shlibs/symbols.include-1: Adjust some tests
	to also test inclusions with included files lacking a header line.

2007-12-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Doesn't warn any more about libm.so.6
	being unused if the binary is also linked against libstdc++ since
	g++ always add an implicit -lm.

2007-12-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs.pm (find_library): When it finds a library