@@ -1,3 +1,9 @@
+2007-12-13  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/t/500_Dpkg_Path.t, scripts/Makefile.am: Add new
+	non-regression tests for functions provided by the Dpkg::Path
+	module.
+
 2007-12-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Fix typo (syserror() -> syserr()).
